--- a/themes/custom/biocuration/scss/biocuration/_general.scss
+++ b/themes/custom/biocuration/scss/biocuration/_general.scss
@@ -39,6 +39,11 @@
   }
 }
 
+#masthead.background-image-header {
+  position: relative;
+  z-index: 2;
+}
+
 main#main {
   padding: 25px 10px;
 }
